fix dark mode

--- a/Workspace/App/client/src/Components/Myactivities/Myactivities.module.css
+++ b/Workspace/App/client/src/Components/Myactivities/Myactivities.module.css
@@ -66,6 +66,7 @@
     width: 140px;
     text-align: center;
     flex-shrink: 0;
+    color: var(--text-dark);
 }
 
 .verticalLine {
@@ -82,6 +83,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    color: var(--text-dark);
 }
 
 .eventTitleCategory {
