--- a/Workspace/App/client/src/Components/Mytask/mytask.module.css
+++ b/Workspace/App/client/src/Components/Mytask/mytask.module.css
@@ -83,6 +83,7 @@
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid #ddd; /*Tạo viền ngăn cách*/
+    color: var(--text-dark);
   }
   
   .dot {
@@ -282,7 +283,7 @@
   bottom: 10px;
   right: 10px;
   background-color: var(--background-color);
-  color:var(text-dark);
+  color: var(--text-dark);
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 5px;
