--- a/Workspace/App/client/src/Components/Setting/Setting.module.css
+++ b/Workspace/App/client/src/Components/Setting/Setting.module.css
@@ -2,12 +2,18 @@
   --setting-bg: #e4e4e4;
   --toggle-bg: #ccc;
   --toggle-circle: #fff;
+  --text-dark: #000000;
+  --text-light: #ffffff;
+  --header: #7a1a08;
 }
 
 [data-theme="dark"] {
   --setting-bg: #98989878;
   --toggle-bg: #444;
   --toggle-circle: #ffcf7d;
+  --text-dark: #ffffff; 
+  --text-light: #000000;
+  --header: #ffc821;
 }
 
 .container {
@@ -45,6 +51,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 16px rgba(0, 0, 0, 0.1);
   background-color: var(--setting-bg);
+  color: var(--text-dark);
   width: 100%;
   height: 50px;
   padding: 10px;
@@ -57,6 +64,7 @@
 /* Toggle switch styles */
 .toggleWrapper {
   display: inline-block;
+  cursor: pointer;
   position: relative;
   width: 50px;
   height: 28px;
@@ -82,6 +90,7 @@
 
 .toggleCircle {
   position: absolute;
+  cursor: hand;
   top: 4px;
   width: 20px;
   height: 20px;
